# scribby

./: .editorconfig  README.md  meson.build  meson_options.txt
docs/: README.md
docs/proposals/: README.md  daemon.md
etc/: meson.build
src/: config.c  config.h  meson.build  scribbyd.c  types.h
systemd/: meson.build  scribbyd.service
